[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/sprites/character_v2_looking front.png" type="Texture" id=1]
[ext_resource path="res://Assets/sprites/character_v2_eyes_closed.png" type="Texture" id=2]
[ext_resource path="res://GUI/Host_Missing_Screen.gd" type="Script" id=3]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "blink"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4.8, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "bump"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1.5, -9 ), Vector2( 6.5, 2.5 ), Vector2( -11.5, 8.5 ), Vector2( 4, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.9375, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 0.303143, 2.61003, 1 ),
"update": 0,
"values": [ Vector2( 1.43051e-06, -1.90735e-06 ), Vector2( 1.43051e-06, -1.90735e-06 ), Vector2( 0, -20 ), Vector2( 1.43051e-06, -1.90735e-06 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 0.354553, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.20007, 0.917384 ), Vector2( 0.916712, 1.13495 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

// help: https://youtu.be/AOKZ3ZE9ohI
// help: https://youtu.be/zpIjme5Ah7Q

uniform vec4 OLDCOLOR1 : hint_color;
uniform vec4 OLDCOLOR2 : hint_color;

uniform vec4 NEWCOLOR1 : hint_color;
uniform vec4 NEWCOLOR2 : hint_color;

void fragment() {
	vec4 curr_color = texture(TEXTURE, UV); // get current color of pixel
	
	// lets check that our current pixel colour is any of the OLDCOLORs we wish to swap
	// if our pixel is an old colour then swap COLOR to NEWCOLOR
	if (curr_color.a > 0.25){
		COLOR = NEWCOLOR1;
	}
	if (curr_color.r > 0.45 && curr_color.g > 0.45 && curr_color.b > 0.45){
		COLOR = NEWCOLOR1;
	}
	else{
		COLOR = curr_color;
	}
}"

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = SubResource( 8 )
shader_param/OLDCOLOR1 = Color( 1, 1, 1, 1 )
shader_param/OLDCOLOR2 = Color( 0.360784, 0.360784, 0.360784, 1 )
shader_param/NEWCOLOR1 = Color( 0.956863, 0.533333, 0.0823529, 1 )
shader_param/NEWCOLOR2 = Color( 0.839216, 0.00392157, 0.866667, 1 )

[node name="Host_Missing_Screen" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -721.0
margin_bottom = -212.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -189.0
margin_right = 146.0
margin_bottom = 189.0
color = Color( 0.996078, 0.8, 0.505882, 1 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 30.0
margin_top = 57.0
margin_right = 264.0
margin_bottom = 254.0
color = Color( 0.00784314, 0.0352941, 0.0941176, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.115
anchor_top = 0.087
anchor_right = 0.354
anchor_bottom = 0.244
margin_left = 85.155
margin_top = -3.756
margin_right = 68.738
margin_bottom = -50.672
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MISSING"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.115
anchor_top = 0.087
anchor_right = 0.354
anchor_bottom = 0.244
margin_left = 33.155
margin_top = 264.244
margin_right = 129.738
margin_bottom = 217.328
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OUR HOST WENT MISSING"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actor" type="Node2D" parent="."]
position = Vector2( 146, 158 )
z_index = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Actor"]
anims/RESET = SubResource( 9 )
anims/blink = SubResource( 10 )
anims/bump = SubResource( 11 )
anims/walk = SubResource( 12 )

[node name="Tween" type="Tween" parent="Actor"]

[node name="Sprite" type="Sprite" parent="Actor"]
material = SubResource( 13 )
position = Vector2( 0, -3.8147e-06 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -32, -32 )

[node name="ButtonX" type="Button" parent="."]
margin_left = 267.0
margin_top = 10.0
margin_right = 292.0
margin_bottom = 30.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHome" type="Button" parent="."]
margin_left = 94.0
margin_top = 347.0
margin_right = 194.0
margin_bottom = 377.0
text = "Back to Home"

[connection signal="visibility_changed" from="." to="." method="_on_Host_Missing_Screen_visibility_changed"]
[connection signal="pressed" from="ButtonX" to="." method="_on_ButtonX_pressed"]
[connection signal="pressed" from="ButtonHome" to="." method="_on_ButtonHome_pressed"]
